# nape

./: .gitignore  Cargo.toml  Makefile  README.md
apps/collection-cli/: Cargo.toml
apps/collection-cli/src/: filesystem_state_configuration.rs  main.rs
apps/collection-cli/src/gateway_adapter/git2/: mod.rs  process_retrieval_gateway.rs  process_retrieval_gateway_tests.rs
apps/collection-cli/src/gateway_adapter/nape_evaluator/: evaluate_evidence_gateway_tests.rs  mod.rs
apps/collection-cli/src/gateway_adapter/serde/: mod.rs  persist_report_gateway.rs  persist_report_gateway_tests.rs
apps/collection-cli/src/gateway_adapter/sha2/: signature_algorithm_tests.rs
apps/collection-cli/src/gateway_adapter/state_management/: mod.rs  retrieve_app_state.rs  retrieve_directory_path.rs  retrieve_directory_path_tests.rs
apps/collection-cli/src/gateway_adapter/std_fs/: mod.rs  (+7 more)
apps/collection-cli/src/state_management/: cli_app_state_tests.rs  mod.rs  retrieve_state_file.rs  retrieve_state_file_tests.rs  write_state_file.rs  write_state_file_tests.rs  yaml_serializer_tests.rs
apps/collection-cli/src/usecase_configuration/: collect_evidence.rs  evidence_report.rs  start_collection.rs  start_collection_tests.rs
apps/nape-cli/: Cargo.toml
apps/nape-cli/src/gateway_adapter/: mod.rs
apps/nape-cli/src/state_management/: cli_app_state.rs  cli_app_state_tests.rs  retrieve_state_file_tests.rs  write_state_file_tests.rs  yaml_serializer.rs  yaml_serializer_tests.rs
apps/nape-cli/src/usecase_configuration/: collect_evidence_tests.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/evidence_collection/: mod.rs
domain/src/evidence_collection/usecases/: mod.rs
kernel/: Cargo.toml
kernel/src/: error.rs  lib.rs
kernel/src/algorithms/: mod.rs  os_home_directory.rs  signature_algorithm.rs  signature_algorithm_tests.rs
kernel/src/core/traits/: mod.rs
kernel/src/gateways/: directory_list.rs  file_data_gateway.rs  mod.rs
kernel/src/values/: mod.rs  strings.rs  strings_tests.rs
kernel/src/values/directory/: directory_list.rs  directory_list_tests.rs  mod.rs  name.rs  name_tests.rs
kernel/src/values/nrn/: filepath_codec.rs  filepath_codec_tests.rs  mod.rs  nrn.rs  nrn_tests.rs
kernel/src/values/specification/: api_version.rs  api_version_tests.rs  description.rs  description_tests.rs  file_path.rs  file_path_tests.rs  kind.rs  kind_tests.rs  metadata.rs  metadata_tests.rs  mod.rs  name.rs  name_tests.rs  outcome.rs  outcome_tests.rs  procedure.rs  procedure_tests.rs  repository_link.rs  repository_link_tests.rs  short_description.rs  short_description_tests.rs  subject.rs  subject_id.rs  subject_id_tests.rs  subject_tests.rs
kernel/src/values/text/: block.rs  block_tests.rs  line.rs  line_tests.rs  mod.rs
kernel/src/values/time/: mod.rs  start_time.rs  start_time_tests.rs
kernel/src/values/uri/: mod.rs  url.rs  url_tests.rs
(+112 files in other folders)
