[package]
name = "nape_kernel"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.2"
log = "0.4.22"

[dev-dependencies]
nape_testing_tags = { path = "../test_framework/tags" }
nape_testing_assertions = { path = "../test_framework/assertions" }
